backend-lost: добавил профильь пользователя
