# backend/lost/src/main/resources/openapi/lost.yaml
@@ -33,22 +33,22 @@ paths:
         - in: query
           name: size
           schema:
-           type: integer
-           default: 20
-           minimum: 1
-           maximum: 100
+            type: integer
+            default: 20
+            minimum: 1
+            maximum: 100
           description: Размер страницы
         - in: query
           name: sort
           schema:
-           type: array
-           items:
-             type: string
+            type: array
+            items:
+              type: string
           style: form
           explode: false
           description: >
-           Поля для сортировки в формате `field,order` (например, `date,desc`).
-           Можно указать несколько параметров.
+            Поля для сортировки в формате `field,order` (например, `date,desc`).
+            Можно указать несколько параметров.
 
       requestBody:
         required: true
@@ -451,8 +451,7 @@ components:
         responses:
           type: array
           items:
-            type: string
-            description: Номера телефонов тех, кто откликнулся (видны только для владельца)
+            $ref: '#/components/schemas/ShortenedUserProfile'
         photos:
           type: array
           items:
@@ -582,7 +581,25 @@ components:
       format: uuid
       description: Уникальный идентификатор вещи
       example: "550e8400-e29b-41d4-a716-446655440000"
-
+    ShortenedUserProfile:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+          description: Адрес электронной почты пользователя
+          example: "user@example.com"
+        phone:
+          type: string
+          description: Номер телефона пользователя
+          example: "+79001234567"
+        username:
+          type: string
+          description: Имя пользователя
+          example: "username"
+      required:
+        - email
+        - username
     ErrorResponse:
       type: object
       properties:
